Text appearing no longer shifts elements

--- a/src/styles/containers/Test.scss
+++ b/src/styles/containers/Test.scss
@@ -21,4 +21,13 @@
             padding: 0rem 2rem;
         }
     }
+
+    .hide-p {
+        opacity: 0;
+        -webkit-touch-callout: none;
+        -webkit-user-select: none; 
+           -moz-user-select: none; 
+            -ms-user-select: none; 
+                user-select: none; 
+    }
 }
